--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-image-picker": "3.5.0",
     "react-native-image-zoom-viewer": "3.0.1",
     "react-native-lightbox": "0.8.1",
+    "react-native-lightbox-v2": "^0.8.7",
     "react-native-modal": "11.10.0",
     "react-native-picker-select": "8.0.4",
     "react-native-reanimated": "2.0.1",
