--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@actbase/react-daum-postcode": "0.9.2",
     "@react-native-community/async-storage": "1.12.1",
+    "@react-native-community/datetimepicker": "^3.5.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-picker/picker": "1.14.0",
     "@react-navigation/bottom-tabs": "5.11.8",
